--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,337 @@ body {
   background: url("../img/top/top_kv.jpg") top center / cover;
   position: relative;
 }
+@media screen and (min-width: 1080px) {
+  .top_kv-img-wrap {
+    background: url("../img/top/top_kv.jpg") bottom center / cover;
+  }
+}
 .top_kv-text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: var(--white-color);
+  font-size: 44px;
+  line-height: 1.8;
+  width: 43.5%;
+}
+@media screen and (min-width: 1080px) {
+  .top_kv-text {
+    width: 23%;
+    height: 443px;
+  }
+}
+.top_kv_scroll {
+  font-size: 15px;
+  line-height: 1.2;
+  color: var(--white-color);
+  position: absolute;
+  left: 50%;
+  bottom: 34px;
+  transform: translateX(-50%);
+  font-family: "GFS Didot", serif;
+  display: inline-block;
+}
+@media screen and (min-width: 1080px) {
+  .top_kv_scroll {
+    font-size: 22px;
+  }
+}
+.top_kv_scroll::before {
+  content: "";
+  width: 15px;
+  height: 4px;
+  border-style: solid;
+  border-width: 6px 0 6px 8px;
+  border-color: transparent transparent transparent var(--white-color);
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  margin-top: -6px;
+  transform: translateX(-50%) rotate(90deg);
+}
+@media screen and (min-width: 1080px) {
+  .top_kv_scroll::before {
+    width: 21px;
+    height: 6px;
+  }
+}
+
+/* トップページーこだわり */
+.top_obsession {
+  padding: 44px 0 61px;
+}
+@media screen and (min-width: 1080px) {
+  .top_obsession {
+    padding: 64px 0;
+  }
+}
+
+.top_obsession__pc {
+  display: none;
+}
+@media screen and (min-width: 1080px) {
+  .top_obsession__pc {
+    display: block;
+  }
+  .top_obsession__sp {
+    display: none;
+  }
+}
+.top_obsession-tit {
+  font-size: 20px;
+  line-height: 1.95;
+  text-align: center;
+}
+.top_obsession-thehouse_wrap {
+  margin-left: 22px;
+  margin-top: 30px;
+  display: flex;
+  gap: 21px;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .top_obsession-thehouse_wrap {
+    width: 50%;
+    margin: 30px auto 0;
+    gap: 36px;
+  }
+}
+.top_obsession-thehouse-text-img__wrap {
+  width: 53px;
+  height: 236px;
+}
+.top_obsession-thehouse-text-img {
+  width: 100%;
+  height: 100%;
+}
+.top_obsession-thehouse-img__wrap {
+  width: 297px;
+  height: 386px;
+}
+.top_obsession-thehouse-img {
+  width: 100%;
+  height: 100%;
+}
+.top_obsession-content {
+  margin-top: 49px;
+  margin-left: 40px;
+  font-size: 12px;
+  line-height: 2.167;
+}
+@media screen and (min-width: 768px) {
+  .top_obsession-content {
+    width: 38%;
+    margin: 49px auto 0;
+  }
+}
+.top_obsession-btn {
+  display: block;
+  width: 314px;
+  height: 42px;
+  margin: 48px auto 0;
+  background: var(--black-color2);
+}
+.top_obsession-btn__link {
+  color: var(--white-color);
+  font-size: 18px;
+  line-height: 1.22;
+}
+/* トップページーこだわりPC */
+
+.top_obsession-content-wrap__pc {
+  display: flex;
+  justify-content: space-between;
+}
+.top_obsession-thehouse-text-img__wrap__pc {
+  width: 9%;
+  margin-left: 64px;
+}
+.top_obsession-thehouse-text-wrap__pc {
+  margin-top: 36px;
+}
+.top_obsession-thehouse_title__pc {
+  display: flex;
+  flex-flow: column;
+  font-family: "GFS Didot", serif;
+  font-size: 40px;
+  line-height: 1.275;
+}
+.top_obsession-thehouse_subtitle__pc {
+  font-size: 20px;
+  line-height: 1.95;
+}
+.top_obsession-thehouse-text-content__pc {
+  margin-top: 48px;
+  line-height: 1.7;
+}
+.top_obsession-thehouse-text-img__pc {
+  width: 100%;
+  height: 100%;
+}
+.top_obsession-thehouse-img__wrap__pc {
+  width: 52.2%;
+}
+.top_obsession-btn__pc {
+  margin-top: 48px;
+}
+.top_obsession-btn__link__pc {
+  font-size: 24px;
+  color: #000;
+  display: flex;
+  position: relative;
+}
+.top_obsession-btn__link__pc:before {
+  content: "";
+  width: 89px;
+  border-top: 1px solid var(--black-color2);
+  top: 40px;
+  left: 110px;
+  position: absolute;
+}
+.top_obsession-btn__link__pc::after {
+  content: "";
+  width: 10px;
+  height: 8px;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-color: transparent transparent transparent var(--black-color2);
+  position: absolute;
+  top: 35px;
+  left: 192px;
+  transform: translateX(-50%) rotate(135deg);
+}
+
+/* トップページ-works */
+.top_works {
+  background: var(--gray-color2);
+  padding-top: 61px;
+  padding-bottom: 97px;
+}
+.m_top-tit {
+  text-align: center;
+  font-size: 24px;
+  font-family: "GFS Didot", serif;
+  line-height: 1.291;
+  display: flex;
+  flex-flow: column;
+}
+.m_top-subtit {
+  font-family: "Noto Serif JP", serif;
+  font-size: 12px;
+  line-height: 2.416;
+}
+
+.top_works-img__wrapper {
+  display: flex;
+  flex-flow: column;
+  margin-top: 61px;
+}
+@media screen and (min-width: 768px) {
+  .top_works-img__wrapper {
+    gap: 16px;
+    margin: 59px 70px 0;
+    flex-flow: wrap;
+  }
+}
+.top_works-img__wrap {
+  height: 416px;
+  position: relative;
+  z-index: var(--z-index-back);
+}
+@media screen and (min-width: 768px) {
+  .top_works-img__wrap {
+    width: calc((100% - 32px) / 3);
+    height: 350px;
+  }
+  .top_works-img__wrap:last-child {
+    display: none;
+  }
+}
+@media screen and (min-width: 1080px) {
+  .top_works-img__wrap {
+    height: 409px;
+  }
+}
+.top_works-img {
+  height: 100%;
+  width: 100%;
+  object-position: 40% bottom;
+  object-fit: cover;
+}
+
+.top_works-img-more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--white-color);
+  right: 0;
+  position: absolute;
+  background: var(--black-color2);
+  z-index: var(--z-index-modal);
+  bottom: 0;
+  width: 137px;
+  height: 34px;
+}
+@media screen and (min-width: 768px) {
+  .top_works-img-more {
+    display: none;
+  }
+}
+.top_view-btn__pc {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .top_view-btn__pc {
+    display: block;
+    width: auto;
+    margin: 87px auto 0;
+  }
+}
+/* トップページーフロー */
+.top_flow__sp-container {
+  padding: 40px 0 49px;
+}
+.top_flow-btn {
+  width: 294px;
+  margin: 29px auto 0;
+}
+.top_flow__sp-text {
+  line-height: 2;
+  font-size: 14px;
+  width: 176px;
+  margin: 0 auto;
+  text-align: center;
+}
+.top_flow__sp-flow__wrap {
+  width: 294px;
+  margin: 44px auto 0;
+  padding: 38px 40px;
+  border: 1.5px solid var(--black-color2);
+  position: relative;
+}
+.top_flow__sp-flow-tit {
+  font-family: "GFS Didot", serif;
+  font-size: 22px;
+  line-height: 1.32;
+}
+.top_flow__sp-flow-text {
+  font-family: "Noto Serif JP", serif;
+  font-size: 13px;
+  line-height: 1.92;
+  margin-top: 9px;
+}
+.top_flow__sp-flow__wrap::after {
+  content: "";
+  width: 30px;
+  height: 27px;
+  border-style: solid;
+  border-width: 30px 0 30px 30px;
+  border-color: transparent transparent transparent var(--black-color2);
+  position: absolute;
+  bottom: -25px;
+  right: -25px;
+  margin-top: -6px;
+  transform: translateX(-50%) rotate(45deg);
 }
