--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,81 @@ body {
 }
 
 
+
+
+
+/* construction-sub */
+
+.construction-detail_top_kv-img-wrap {
+  height: 100vh;
+  background: url("../img/works/works_1.jpg") top center / cover;
+}
+
+.construction-detail_container{
+  margin: 33px 26px 44px 26px;
+}
+
+.construction-detail-tit{
+  font-size: 16px;
+}
+
+.construction-detail-sub-tit{
+  margin-top: 10px;
+  font-size: 12px;
+}
+
+.construction-detail-table{
+  margin-top: 36px;
+  padding-left: 18.6px;
+  font-size: 8px;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.construction-detail-table-row1{
+  padding-left: 18.6px;
+  padding-right: 18.6px;
+  width: 100px;
+  text-align: center;
+  /* vertical-align: middle; */
+}
+
+.construction-detail-table-tr{
+  border-top: 0.2px solid black;
+  margin-top: 17.2px;
+}
+
+.construction-detail-table-row2{
+  
+}
+
+.construction-detail-consept-tit{
+  margin-top: 36.7px;
+  font-size: 20px;
+}
+
+.construction-detail-consept-txt{
+  margin-top: 12px; 
+  font-size: 7px;
+}
+
+.construction-detail-point-tit{
+  margin-top: 19px; 
+  font-size: 20px;
+}
+
+.construction-detail-point-txt{
+  margin-top: 12px;  
+  font-size: 7px;
+}
+
+.construction-detail_img_wrap:not(:first-child){
+  margin-top: 6px;
+}
+
+
+
+
 /* ---------- sauna-page ---------- */
 .m_sauna_kv-wrap {
   position: relative;
